# stylus-precompile

./: .gitignore  .gitignore~  Cargo.toml  README.md
contracts/: .prettierrc  hardhat.config.js  package-lock.json  package.json  tsconfig.json
contracts/contracts/: MockPoseidonPrecompile.sol  PoseidonBenchmark.sol  PoseidonSolidity.sol
contracts/contracts/examples/: PoseidonExample.sol  ZKMerkleTree.sol
contracts/contracts/interfaces/: IPoseidonHash.sol
contracts/deployments/: poseidon-precompile.json
contracts/reports/: gas-benchmark-report.json
contracts/scripts/: deploy-precompile.ts  deploy-stylus-retry.ts  deploy-stylus.ts
contracts/test/: PoseidonDebugTest.test.js  PoseidonDirectTest.test.js  PoseidonGasBenchmark.test.js  PoseidonHash.test.js
docs/: PRACTICAL_GUIDE.md  Steps.md  TESTING_GUIDE.md  THEORY_AND_DESIGN.md
scripts/: build.sh  deploy.sh  generate_precompile.sh  usage-example.ts  versions.sh
src/: cli.rs  entrypoint.rs  errors.rs  lib.rs  main.rs  utils.rs
src/poseidon/: constants.rs  core.rs  interface.rs  mod.rs  params.rs
templates/precompile/: core.rs.template  interface.rs.template  mod.rs.template  params.rs.template
templates/solidity/: example.sol.template  interface.sol.template
templates/test/: test.rs.template
tests/: benchmark_tests.rs  cli_runner.rs  examples.rs  integration_tests.rs  poseidon_tests.rs
